public/scripts/extensions/prompt-inspector/style.css
#inspectPromptHeader {
    position: relative;
}

#inspectPromptFormat {
    position: absolute;
    top: 0;
    right: 0;
    max-width: 5em;
}

@media screen and (max-width: 1000px) {
    #inspectPromptHeader {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    #inspectPromptFormat {
        position: unset;
    }
}

